# DCGAN-PyTorch

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  inference.py  main.py  models.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  train.py
.github/workflows/: pypi-publish.yml  python-package.yml
gan_face_generate/: dataset.py  inference.py  main.py  models.py  train.py
tests/: test_inference.py
