[metadata]
name = gan_face_generate
version = 1.0.1
description = generate a random face created by DCGAN trained with DigiFace1M database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chien-liu/DCGAN-PyTorch
author = Chien Liu
author_email = liu_chien@gapp.nthu.edu.tw
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
py_modules = gan_face_generate
install_requires =
    matplotlib>=3.8.0
    numpy>=1.26.0
    torch>=2.1.0
    torchvision>=0.16.0
python_requires = >=3.9

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*

[options.entry_points]
console_scripts =
    gan_face_generate=gan_face_generate.main:main

[options.package_data]
gan_face_generate = weights.tar

[bdist_wheel]
universal = 0
